# image_convolution

./: CMakeLists.txt  README.md  benchmark.sh  kernels.cpp  kernels.h  main.cpp
